# ML_ned_ned_final

./: waqar.pptx
FINAL_ml_code/: docker-compose.yml
FINAL_ml_code/backend/: Dockerfile  docker-compose.yml  pyproject.toml
FINAL_ml_code/backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
FINAL_ml_code/frontend/: Dockerfile  app.py  docker-compose.yml
FINAL_ml_code/kafka/: docker-compose.yml
FINAL_ml_code/kong/: Dockerfile  kong.yml
